# ucgrants

./: .gitignore  README.md  databricks.yml  main.py  noxfile.py  pyproject.toml  refresh_tables.py
dashboards/: unity-catalog-grants.lvdash.json
tests/: test_grants.py
ucgrants/: __init__.py  audit_tables.py  grantees.py  grants.py  system_tables.py
ucgrants/sdk/: __init__.py
ucgrants/sdk/service/: iam.py
